# wuk_cupti_wrapper

./: CMakeLists.txt  README.md
include/wuk/: cupti_wrapper.hh
lib/: CMakeLists.txt  Metric.cpp  Metric.h  cupti_wrapper.cc
lib/extensions/: CMakeLists.txt
lib/extensions/include/c_util/: ScopeExit.h
test/: CMakeLists.txt
test/concurrent_profiling/: CMakeLists.txt  main.cu
test/range_profiling/: CMakeLists.txt  cupti_wrapper.cc  cupti_wrapper.h  main.cu
